--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ matrix:
 
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update          ; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew outdated openssl || brew install openssl    ; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install curl    ; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew link curl --force     ; fi
 
 install:
   - ./autogen.sh
