--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update          ; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install curl    ; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew link curl --force     ; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install gcc --without-multilib     ; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install gcc     ; fi
 
 install:
   - ./autogen.sh
