--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ matrix:
   include:
     - os: osx
       sudo: false
-      env: CONFIG_FLAGS="--with-libcurl=/usr/local/opt/curl" CC="gcc-5" CXX=g++-5
+      env: CONFIG_FLAGS="--with-libcurl=/usr/local/opt/curl" CFLAGS="-O3 -march=corei7-avx"
       osx_image: xcode6.4
       compiler: clang
       file: 'hodlminer-wolf-mac.zip'
@@ -20,13 +20,11 @@ before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update          ; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install curl    ; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew link curl --force     ; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install gcc     ; fi
 
 install: true
 
 script:
   - ./autogen.sh
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then ./nomacro.pl         ; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then export CONFIG_FLAGS="--with-libcurl=/usr/local/opt/curl"     ; fi
-  - ./configure CFLAGS="-O3 -march=native" $CONFIG_FLAGS
+  - ./configure CFLAGS="-O3 -march=native" $CFLAGS $CONFIG_FLAGS
   - make
